# uwuifier_rust

./: Cargo.toml  README.md
benches/: benchy.rs
src/: lib.rs  main.rs
